Fix: Increase modal z-index to 20000

--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -4,7 +4,7 @@
 .modal {
     display: none;
     position: fixed;
-    z-index: 2000;
+    z-index: 20000;
     left: 0;
     top: 0;
     width: 100%;
